<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/text_description_photo"
            app:srcCompat="@mipmap/cpu_intel" />
        <TextView
            android:id="@+id/card_title_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_example"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:lines="2"
            android:textStyle="bold"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/card_description_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/text_example"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lines="1"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/card_number_objects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/text_example"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:lines="1"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/card_price_objects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/text_example"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:lines="1"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/card_button_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:minHeight="48dp"
            android:text="@string/button_product"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</androidx.cardview.widget.CardView>